--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Werkzeug >= 0.16.1
-connexion >= 1.1.15
+Werkzeug == 2.2.3
+connexion[swagger-ui] == 2.14.2
 certifi >= 2019.6.16
 urllib3 >= 1.25.3
 python-dateutil >= 2.6.1
@@ -13,5 +13,5 @@ PyYAML >= 5.1.0
 six >= 1.12.0
 gevent == 23.9.1
 bottle >= 0.12.16
-flask >= 1.0.2
+flask == 2.2.5
 csvvalidator >= 1.2
