--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+include conf/*
 include mistk/model/server/**/*.yaml
 include mistk/transform/server/**/*.yaml
 include mistk/evaluation/server/**/*.yaml
