--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-Werkzeug == 2.2.3
-connexion[swagger-ui] == 2.14.2
+Werkzeug == 2.0.3
+pyrsistent < 0.17.0
+swagger-ui-bundle>=0.0.2,<0.1
+connexion == 2.7.0
 certifi >= 2019.6.16
+urllib3 >= 1.25.3, < 1.26.0
 python-dateutil >= 2.6.1
 setuptools >= 21.0.0
 transitions == 0.6.4
-pypubsub == 4.0.3
+pypubsub == 4.0.0
 rwlock == 0.0.7
 wsgiserver == 1.3
-autologging >= 1.2.1
+autologging >= 1.2.1    
 PyYAML >= 5.1.0
-urllib3 >= 1.25.3
 six >= 1.12.0
-gevent == 23.9.1
-bottle >= 0.12.16
-flask == 2.2.5
+gevent == 20.9.0
+bottle == 0.12.16
+flask == 2.0.3
 csvvalidator >= 1.2
