--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Werkzeug == 3.0.1
-connexion[swagger-ui] == 3.0.6
+connexion == 3.0.6
+connexion[flask, swagger-ui, uvicorn] == 3.0.6
 certifi >= 2019.6.16
 python-dateutil >= 2.6.1
 setuptools >= 21.0.0
