--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Werkzeug == 3.0.6
-connexion[swagger-ui] == 3.2.0
+Werkzeug == 2.2.3
+connexion[swagger-ui] == 2.14.2
 certifi >= 2019.6.16
 python-dateutil >= 2.6.1
 setuptools >= 21.0.0
 transitions == 0.6.4
 pypubsub == 4.0.3
 rwlock == 0.0.7
-wsgiserver == 1.3
+waitress == 3.0.2
 autologging >= 1.2.1
 PyYAML >= 5.1.0
 urllib3 >= 1.25.3
